org_unpackaged/standard/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Qualified_Grade__c</fullName>
        <formula>IF(
   AND(
       OR(ISPICKVAL(X75_hr_Bill_Rate__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Upcoming_Signing_Opportunity__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Requires_something_they_can_t_get__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(US_Based__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Sells_Services_to_Large_Businesses__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(No_time_to_do_non_billable_work__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(X6_Years_of_Experience__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Employed_at_consulting_or_staffing_firm__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Has_need_for_business_insurance__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Has_LLC_or_S_Corp__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Has_College_Degree__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;)),
       OR(ISPICKVAL(Needs_Health_Benefits__c,&apos;Unknown&apos;),ISPICKVAL(X75_hr_Bill_Rate__c,&apos;&apos;))
      ),
   &apos;Unknown&apos;,
   IF(
      AND(
          ISPICKVAL(X75_hr_Bill_Rate__c,&apos;True&apos;),
          OR(
             ISPICKVAL(Upcoming_Signing_Opportunity__c,&apos;True&apos;),
             ISPICKVAL(Requires_something_they_can_t_get__c,&apos;True&apos;)
            ),
          ISPICKVAL(US_Based__c,&apos;True&apos;),
          OR(
             ISPICKVAL(Sells_Services_to_Large_Businesses__c,&apos;True&apos;),
             ISPICKVAL(No_time_to_do_non_billable_work__c,&apos;True&apos;),
             ISPICKVAL(X6_Years_of_Experience__c,&apos;True&apos;),
             ISPICKVAL(Employed_at_consulting_or_staffing_firm__c,&apos;True&apos;),
             ISPICKVAL(Has_need_for_business_insurance__c,&apos;True&apos;),
             ISPICKVAL(Has_College_Degree__c,&apos;True&apos;),
             ISPICKVAL(Has_LLC_or_S_Corp__c,&apos;True&apos;),
             ISPICKVAL(Needs_Health_Benefits__c,&apos;True&apos;)
            )
         ),
      &apos;A&apos;,
      IF(
         AND(
             ISPICKVAL(US_Based__c,&apos;True&apos;),
             OR(
                ISPICKVAL(Sells_Services_to_Large_Businesses__c,&apos;True&apos;),
                ISPICKVAL(No_time_to_do_non_billable_work__c,&apos;True&apos;),
                ISPICKVAL(X6_Years_of_Experience__c,&apos;True&apos;),
                ISPICKVAL(Employed_at_consulting_or_staffing_firm__c,&apos;True&apos;),
                ISPICKVAL(Has_need_for_business_insurance__c,&apos;True&apos;),
                ISPICKVAL(Has_College_Degree__c,&apos;True&apos;),
                ISPICKVAL(Has_LLC_or_S_Corp__c,&apos;True&apos;),
                ISPICKVAL(Needs_Health_Benefits__c,&apos;True&apos;)
               )
            ),
         &apos;B&apos;,
         &apos;C&apos;
        )
    )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Client_Formula__c</fullName>
        <formula>Referring_Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referring Client Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the field used to display the client that this lead came from.</description>
        <inlineHelpText>This is the field used to display the client that this lead came from.</inlineHelpText>
        <label>Referring Client</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Referred_Associate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referring_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links this record to a contact record that referred it</description>
        <inlineHelpText>Any record under &quot;Contacts&quot; in the Salesforce system that has referred this lead</inlineHelpText>
        <label>Referring Associate</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Record is not an associate</errorMessage>
            <filterItems>
                <field>Contact.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referred leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_something_they_can_t_get__c</fullName>
        <inlineHelpText>i.e. Security Clearance, Large Professional Liability Policy, Extensive Business History, Compliance with the Fed. Government</inlineHelpText>
        <label>Client Requires Difficult Item to Obtain</label>
        <picklist>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Research_Bulletin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research Bulletin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQL_Threshold_Crossed__c</fullName>
        <label>SQL Threshold Crossed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <description>Secondary email</description>
        <inlineHelpText>Secondary Email</inlineHelpText>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <description>Used to capture this records secondary phone number</description>
        <inlineHelpText>Please enter this records secondary phone number</inlineHelpText>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sells_Services_to_Large_Businesses__c</fullName>
        <inlineHelpText>Fortune 500 and above</inlineHelpText>
        <label>Sells Services to Large Businesses</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Cant_Identify__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;Can&apos;t Identify&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status = Can&apos;t Identify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <label>Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Deferred__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;Deferred&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status = Deferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Identified__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;Identified&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status = Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Lost__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;Lost&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status = Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_New__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;New&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status = New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Sold__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;Sold&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status = Sold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Working__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;Working&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status = Working</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Persona__c</fullName>
        <description>Allows the user to select the Sub-Persona for this record</description>
        <inlineHelpText>Please select the Sub-Persona for this record</inlineHelpText>
        <label>Sub-Persona</label>
        <picklist>
            <controllingField>Persona__c</controllingField>
            <picklistValues>
                <fullName>Professional Service Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hobby IC (Financially Independent)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Retired Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependent Retired Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresh Lay-off/Job Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSC Newbie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Considering IC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Considering IC (Actively Searching Vendors/Way to Incorporate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forced Fresh Lay-off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forced PSC Newbie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasoned CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Broker or Group Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Established Freelancer Primarily with Business Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Established Freelancer with Consumer Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelancer Primarily with Business Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelancer with Consumer Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newbie Freelancer Primarily with Business Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newbie Freelancer with Consumer Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker that is an MBO Exec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker that is an MBO Sub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO Corp Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Company that Uses 1099 Workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Company Needing Payroll (Primarily NSE Workers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Company Needing Payroll</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>This is used by EMs to better describe the Lead Status</description>
        <inlineHelpText>Use this field to better describe the Lead Status</inlineHelpText>
        <label>Sub-Status</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Project Starting &gt; 30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unidentified Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could Not Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Based__c</fullName>
        <inlineHelpText>Assumes they are a US tax payer</inlineHelpText>
        <label>US Based</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upcoming_Signing_Opportunity__c</fullName>
        <label>Upcoming Signing Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <description>Updated by Business Center, pushed into Access</description>
        <inlineHelpText>The Business Center and Access user name</inlineHelpText>
        <label>User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webinar_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webinar Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X6_Years_of_Experience__c</fullName>
        <label>6+ Years of Experience</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X75_hr_Bill_Rate__c</fullName>
        <label>$75/hr+ Bill Rate</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_alumniOutreach__c</fullName>
        <label>Alumni Outreach</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_associateNewsletter__c</fullName>
        <label>MBO Newsletter</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_clientProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Found way around Client Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_consultantBrief__c</fullName>
        <label>Consultant Brief</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_consultantNurturing__c</fullName>
        <label>Consultant Nurturing</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_eduAndResearch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education and Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_enterpriseConferences__c</fullName>
        <label>Enterprise Conferences</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_enterpriseNews__c</fullName>
        <label>Enterprise News</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_enterpriseNurturing__c</fullName>
        <label>Enterprise Nurturing</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_enterpriseWebinars__c</fullName>
        <label>Enterprise Webinars</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_networkingEvents__c</fullName>
        <label>Networking Events</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_nlAndEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletters and Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_otherEAR__c</fullName>
        <label>Other Education and Research</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_otherEvents__c</fullName>
        <label>Other Events</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_otherGeneral__c</fullName>
        <label>Other General</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_otherPromo__c</fullName>
        <label>Other Promotions</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_pANews__c</fullName>
        <label>Press Announcements/News</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_pracOwn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practice Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_qualification__c</fullName>
        <label>Survey Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_referralProgram__c</fullName>
        <label>Referral Program</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_soi__c</fullName>
        <label>State of Independence</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fb_tipsAndFeatures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tips and Features About MBO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fb_webinarSeries__c</fullName>
        <label>Webinar Series</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fd_bcStatusChange__c</fullName>
        <label>Associate Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_mboCreate__c</fullName>
        <label>MBO Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_origDate__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fd_slaActivate__c</fullName>
        <formula>ConvertedDate</formula>
        <label>Activate Associate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaAssistEnroll1__c</fullName>
        <label>Assist with Enrollment - Attempt 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaAssistEnroll2__c</fullName>
        <label>Assist with Enrollment - Attempt 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaAssistEnroll3__c</fullName>
        <label>Assist with Enrollment - Attempt 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaBackgroundCheck1__c</fullName>
        <label>Background/Drug Screening Begins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaBackgroundCheck2__c</fullName>
        <label>Background/Drug Screening Launched</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaBackgroundCheck3__c</fullName>
        <label>Background/Drug Screening Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaEnrollComplete__c</fullName>
        <label>Enrollment Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaEnrollPark__c</fullName>
        <label>Park And Escalate to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaI9__c</fullName>
        <label>I-9 submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaInitialCall1__c</fullName>
        <label>Conduct Initial Call - Attempt 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaInitialCall2__c</fullName>
        <label>Conduct Initial Call - Attempt 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaInitialCall3__c</fullName>
        <label>Conduct Initial Call - Attempt 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaInitialPark__c</fullName>
        <label>Park And Escalate to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaInquiry__c</fullName>
        <label>Inquiry Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaOnboardingSubmit__c</fullName>
        <label>On-boarding Documents Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaPending__c</fullName>
        <label>Associate Begins Enrollment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaQualDocs__c</fullName>
        <label>Qualification Docs Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaQualQuestionComp__c</fullName>
        <label>Enrollment Questionnaire Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaQualSurvey__c</fullName>
        <label>Qualification Survey Assessed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaQualUpload__c</fullName>
        <label>Upload Supporting Documentation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaWOSubmit__c</fullName>
        <label>Client Sends Work Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_syncLastModDate__c</fullName>
        <label>Sync Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fn_associateStatusAge__c</fullName>
        <formula>IF(NOT(ISBLANK(fd_bcStatusChange__c)), TODAY() - fd_bcStatusChange__c, TODAY() - DATEVALUE(CreatedDate))</formula>
        <label>Associate Status Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_createAge__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <label>Creation Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_lastActivityAge__c</fullName>
        <formula>IF(NOT(ISBLANK(LastActivityDate)),TODAY() - LastActivityDate, TODAY() - DATEVALUE( CreatedDate ))</formula>
        <label>Last Activity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_roundRobinId__c</fullName>
        <formula>MOD(  VALUE(fs_leadNumber__c) ,20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_salesStatusAge__c</fullName>
        <formula>IF(NOT(ISBLANK( Status_Change_Date__c )), TODAY() - Status_Change_Date__c, TODAY() - DATEVALUE(CreatedDate))</formula>
        <label>Sales Status Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fs_aDGUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Active Directory GUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fs_assocCoName__c</fullName>
        <label>Associate&apos;s Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>